# OOP_LW

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: divider.h
lab1/src/: divider.cpp
lab1/test/: tests01.cpp
lab2/: CMakeLists.txt
lab3/: CMakeLists.txt  CmakeLists.txt  main.cpp
lab3/include/: figure.h  hexagon.h  octagon.h  point.h  triangle.h  utils.h
lab3/src/: figure.cpp  hexagon.cpp  octagon.cpp  point.cpp  triangle.cpp  utils.cpp
lab3/test/: test.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: array.h  custom-concepts.h  figure.h  hexagon.h  octagon.h  triangle.h
lab4/test/: test.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: stack.hpp  static-resource.hpp
lab5/test/: test.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: Game.h  NPC.h  Observer.h  point.h  utils.h
lab6/include/NPCs/: Bandit.h  Orc.h  Werewolf.h
lab6/include/factories/: FactoryFile.h
lab6/include/observers/: ObserverStdout.h
lab6/src/: Game.cpp  NPC.cpp
lab6/src/NPCs/: Bandit.cpp  Orc.cpp  Werewolf.cpp
lab6/src/factories/: FactoryRandom.cpp
lab6/src/observers/: ObserverFile.cpp  ObserverStdout.cpp
lab6/test/: test.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: DiceBag.h  FightManager.h  Game.h  MapDrawer.h  MoveManager.h  NPC.h  Observer.h  Printer.h  custom-concepts.h  point.h
lab7/include/NPCs/: Bandit.h  Orc.h  Werewolf.h
lab7/include/factories/: FactoryRandom.h
lab7/include/observers/: ObserverFile.h  ObserverMurderStdout.h  ObserverStdout.h
lab7/src/: FightManager.cpp  Game.cpp  MapDrawer.cpp  MoveManager.cpp  NPC.cpp  Printer.cpp  utils.cpp
lab7/src/NPCs/: Bandit.cpp  Orc.cpp  Werewolf.cpp
lab7/src/factories/: FactoryFile.cpp  FactoryRandom.cpp
lab7/src/observers/: ObserverFile.cpp  ObserverMurderStdout.cpp  ObserverStdout.cpp
lab7/test/: test.cpp
